# HordeQT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  appveyor.yml  build.py  convert_files.py  env.sh  pyproject.toml  requirements.dev.txt
.github/workflows/: build.yml  linux.yml  macos.yml  main.yml  windows.yml
QTProj/QtHorde/: .gitignore  QtHorde.pyproject  base_request.json  classes.py  example.py  form.ui  mainwindow.py  prompt_item.ui  prompt_library.py  request.json  requirements.dev.txt  requirements.txt  ui_form.py  ui_prompt_item.py  util.py
QTProj/QtHorde/QTHordeAssets/: Untitled.xcf  pixelcut-export(1).xcf
doc/: model.md  prompt-syntax.md  prompt.md  samplers.md  seed.md
hordeqt_py/: QtHorde.pyproject  __init__.py  __main__.py  base_request.json  build.py  classes.py  form.ui  gallery.py  mainwindow.py  model_dialog.py  prompt_library.py  pysidedeploy.template  ui_form.py  util.py
scratch_area/: .gitignore  build.yml  ci.yml  example.py  format_loader.py  gpt_grid_arrange.py  gpt_masonry_layout.py  mono.py  prompt_matrix.py  scroll_example.py  scroll_masonry.py  style_library.md  test_prompt_matrix.py
scratch_area/loras/: civit_api.py
scripts/: convert_files.py  create_icons.py  update_version.py
src/hordeqt/: .gitignore  VERSION.py  __main__.py  app.py  build.py  classes.py  consts.py  form.ui  gallery.py  model_dialog.py  prompt_library.py  saved_data.py  ui_modelinfo.py  ui_prompt_library.py  util.py
src/hordeqt/civit/: civit_api.py  civit_enums.py
src/hordeqt/classes/: Job.py  LoRA.py  LocalJob.py  Model.py  SavedData.py  Style.py  StyleLibrary.py
src/hordeqt/components/: clickable_label.py  gallery.py  lora_viewer.py  model_dialog.py  pending_items_view.py  prompt_library.py
src/hordeqt/components/gallery/: ImageDetailsPopup.py  ImageGalleryWidget.py  ImagePopup.py  ImageWidget.py  MasonryLayout.py  image_gallery_widget.py  image_popup.py  masonry_layout.py
src/hordeqt/components/localstats/: local_stat_item.py  local_stats.py  stats.py
src/hordeqt/components/loras/: lora_browser.py  lora_item.py  lora_viewer.py  selected_loras.py
src/hordeqt/other/: consts.py  format_loader.py  job_util.py  prompt_util.py  rescan.py  util.py
src/hordeqt/resources/: resources.qrc
src/hordeqt/threads/: api_manager_thread.py  connection_thread.py  download_thread.py  etc_download_thread.py  job_download_thread.py  job_manager_thread.py  load_thread.py  save_thread.py
src/hordeqt/ui/: form.ui  modelinfo.ui  prompt_library.ui
tests/: test_LoRA.py  test_job.py  test_job_util.py  test_local_job.py  test_utils.py
(+6 files in other folders)
