[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hordeqt-py"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Unit1208", email = "unit1208@national.shitposting.agency"}
]
requires-python = ">=3.11,<3.13"

[project.dependencies]
black = "^24.8.0"
autopep8 = "^2.3.1"
pyside6 = "^6.7.2"
keyring = "^25.3.0"
keyrings-alt = "^5.0.2"
requests = "^2.32.3"
nuitka = "^2.3.2"
zstandard = "^0.23.0"
human-readable = "^1.3.4"
pyqt-toast-notification = "^1.3.2"
pillow = "^10.4.0"
coloredlogs = "^15.0.1"
colorama = "^0.4.6"
imageio = "^2.35.1"

[tool.nuitka]
standalone = true
onefile = true
remove-output = true
output-dir = "dist"

[tool.black]
extend-exclude = '''
(
^/hordeqt_py/ui_[_a-zA-Z]+\.py
)'''

[project.scripts]
build = "hordeqt_py.build:main"
regen = "hordeqt_py.build:convert_uic_files"
